# iced_playground

./: Cargo.toml  README.md
icons/: README.md
src/: button_page.rs  counter_page.rs  home.rs  main.rs  text_page.rs
src/pages/: button_page.rs  counter_page.rs  home.rs  text_page.rs  theme_page.rs
