# 🧊 iced_playground
[package]
name = "iced_playground"
version = "0.1.0"
edition = "2024"

# cargo-bundle
[package.metadata.bundle]
name = "PLAYGROUND"
identifier = "app.sleet.playground"
icon = ["icons/icon.icns"]
version = "0.1.0"
copyright = "COPYRIGHT (c) 2025 SLEET.NEAR"
category = "public.app-category.utilities"
short_description = "a hello iced project by sleet"


# dependencies
[dependencies]
iced = "0.13.1"



# ==================================
# copyright 2025 by nonresistant.near